--- a/website/templates/issue_coupon.html
+++ b/website/templates/issue_coupon.html
@@ -25,7 +25,7 @@
                         </div>
                     </div>
                     <div>
-                        발능 및 사용 기간 : {{ cl.date_issue_start }} 부터 ~ {{ cl.date_issue_end}} 까지
+                        발능 기간 : {{ cl.date_issue_start }} 부터 ~ {{ cl.date_issue_end}} 까지
                     </div>
                     {% endfor %}
                 {% else %}
