팝업 알림 띄우기

--- a/website/templates/issue_coupon.html
+++ b/website/templates/issue_coupon.html
@@ -38,5 +38,11 @@
     </div>
 </div>
 
+{% if message %}
+    <script>
+        alert('{{ message }}')
+    </script>
+{% endif %}
+
 {% endblock %}
 
